--- a/adp-app/src/main/resources/config-oss.properties
+++ b/adp-app/src/main/resources/config-oss.properties
@@ -1,8 +1,8 @@
 access_bucketName=test-szyt-files
 access_id=hmAJlW22K9XgfUDW
 access_key=FlLozF3tcK4StCxaS4k7mfF6ToHcbmyPR5crRBD+QdE=
-oss_endpoint=http\://oss-cn-beijing.aliyuncs.com
-oss_cname=https\://test2file.leshui365.com
+oss_endpoint=
+oss_cname=
 proxyHost=10.126.3.112
 proxyPort=3128
 isProxy=YES
@@ -13,7 +13,7 @@ storageType=aliyun
 localPath=/usr/local/upload
 ftp_host=10.126.3.7
 ftp_port=10029
-ftp_username=ftpuser0001
+ftp_username=
 ftp_password=ftpuser0001
 redis_host=10.126.3.15
 redis_port=6379
